# bluebook-scraper

./: Cargo.toml  classes.json
src/: api.rs  data.rs  error.rs  main.rs
src/api/: error.rs  mod.rs
src/parser/: company_categories.rs  company_contacts.rs  company_info.rs  company_locations.rs  company_service_areas.rs  error.rs  mod.rs
test-data/: category.html  company.html  contacts.html  locations.html  search.html  subcategory.html
