[package]
name = "bluebook-scraper"
version = "0.1.0"
authors = ["Ilya Kopeshtianski <lupusanay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["socks"] }
scraper = "0.11.0"
serde_json = "1.0.48"
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"